--- a/atividade_mvc/src/main/resources/application.properties
+++ b/atividade_mvc/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=atividade_mvc
+# Configurações do banco de dados H2 em memória
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Configuração do console do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configurações JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
